gccida/c2/emit_group_store
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2556:4: error: expected ';' after expression
rtx j; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2556:5: error: use of undeclared identifier 'j'
rtx j; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2562:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v46[2]; // [rsp+20h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2563:6: error: use of undeclared identifier 'tmps'
rtx *tmps; // [rsp+28h] [rbp-58h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2566:4: error: expected ';' after expression
rtx dst; // [rsp+40h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2566:5: error: use of undeclared identifier 'dst'
rtx dst; // [rsp+40h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2567:4: error: expected ';' after expression
rtx y; // [rsp+48h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2567:5: error: use of undeclared identifier 'y'
rtx y; // [rsp+48h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2571:1: error: use of undeclared identifier 'dst'
dst = orig_dst; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2576:1: error: use of undeclared identifier 'y'
y = *( rtx *)( *( ( _QWORD *)rtwint + 1) + 8LL); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2576:13: error: expected expression
y = *( rtx *)( *( ( _QWORD *)rtwint + 1) + 8LL); 
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2577:6: error: use of undeclared identifier 'y'
v5 = y == 0LL; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2579:13: error: expected expression
v7 = ( rtx *)( ( char *)&v42 - ( ( 8 * v6 + 15) & 0xFFFFFFFFFFFFFFF0LL)); 
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2582:6: error: use of undeclared identifier 'y'
v8 = y == 0LL; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2586:22: error: use of undeclared identifier 'machine_mode'
v10 = gen_reg_rtx( ( machine_mode)*( unsigned __int8 *)( v9 + 2)); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2588:28: error: expected ')'
emit_move_insn( v10, ( rtx)v9); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2588:15: note: to match this '('
emit_move_insn( v10, ( rtx)v9); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2594:1: error: use of undeclared identifier 'tmps'
tmps = v7; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2597:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = (  struct rtx_def *)i[2]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/expr.c:2609:19: error: use of undeclared identifier 'dst'
v13 = *( _DWORD *)dst; 
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_group_store/src/obj/expr.o] Error 1
